# quota-dock

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md
.github/workflows/: release.yml
cli/: .gitignore  Cargo.toml  config.example.toml  monitor.config.example.json
cli/src/: main.rs  usage.rs
core/: Cargo.toml
core/src/: config.rs  flash.rs  http.rs  lib.rs  serial.rs
core/src/usage/: claude.rs  codex.rs  local.rs  mod.rs
desktop/: Cargo.toml  build.rs  components.json  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: app.rs  firmware.rs  main.rs  settings.rs  sync.rs  worker.rs
desktop/src/app/: actions.rs  dock_ui.rs  monitor_ui.rs  results.rs  ui.rs
desktop/ui/: app.tsx  main.tsx  styles.css  types.ts
desktop/ui/components/: activity-log.tsx  app-header.tsx  feedback.tsx  settings-menu.tsx  status-pill.tsx
desktop/ui/components/ui/: popover.tsx  select.tsx
desktop/ui/lib/: format.ts  i18n.ts  settings.tsx
desktop/ui/views/: dock-view.tsx  setup-view.tsx
firmware/: Cargo.toml  build.rs  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/build_support/: bitmap_font_generator.rs  firmware_hash.rs  image_array_encoder.rs
firmware/scripts/: build.sh  flash.sh  monitor.sh
firmware/src/: main.rs  network.rs  time.rs
firmware/src/app/: mod.rs  renderer.rs  status.rs  text.rs  ui.rs  usage.rs
firmware/src/drivers/: display.rs  mod.rs  touch.rs
preview/: Cargo.toml  build.rs
preview/src/: main.rs
