[package]
name = "quota-dock-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
flash = ["dep:espflash"]

[dependencies]
espflash = { version = "4.4.0", default-features = false, features = ["serialport"], optional = true }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
postcard = { version = "1.1", features = ["alloc"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.6"
toml = "1.1.2"
