[package]
name = "monitor-desktop"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
eframe = "0.34"
egui = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.6"
