[package]
name = "quota-dock-desktop"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
base64 = "0.22.1"
dirs = "6.0"
quota-dock-core = { path = "../core", features = ["flash"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-autostart = "2"
toml = "0.9"

[build-dependencies]
tauri-build = { version = "2", features = [] }
