[package]
name = "agent-quota-monitor"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
anyhow = "1.0"
embedded-svc = "0.29"
heapless = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
esp-idf-sys = { version = "0.37", features = ["native"] }
esp-idf-svc = { version = "=0.52.1", default-features = false, features = ["std", "native"] }

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
fontdue = "0.9"
